Fix overlap in TFC plugin chart widget action buttons

--- a/src/app/css/CIQ_Seed.css
+++ b/src/app/css/CIQ_Seed.css
@@ -885,7 +885,8 @@ ciq-colorpicker {
 }
 
 /* tfc panels have been configured using box-sizing: content-box */
-.chartContainer .create-order {
+.chartContainer div,
+.chartContainer span {
 	box-sizing: content-box;
 }
 /* #endregion */
